@@ -139,6 +139,19 @@ with the <i>Fill- Order</i> tag set to <small>MSB2LSB
 <td width="10%"></td>
 <td width="3%">
 
+<p><b>&minus;r</b></p>
+</td>
+<td width="5%"></td>
+<td width="80%">
+
+<p>Make each strip have no more than the given number of rows.</p>
+</td>
+<td width="0%">
+</td>
+<tr valign="top" align="left">
+<td width="10%"></td>
+<td width="3%">
+
 <p><b>&minus;t</b></p>
 </td>
 <td width="5%"></td>
