@@ -113,6 +113,9 @@ will force data to be written with the
 tag set to
 .SM MSB2LSB .
 .TP
+.B \-r
+Make each strip have no more than the given number of rows.
+.TP
 .B \-t
 Set the threshold value for dithering.
 By default the threshold value is 128.
